fixed spacing on some tex

--- a/Kobe.dev/src/css/Components.css
+++ b/Kobe.dev/src/css/Components.css
@@ -266,8 +266,10 @@
   display:flex;
   flex-direction: row;
   margin-left: 4%;
+  margin-right: 4%;
   column-gap: 35%;
-  height: 40vh;
+  height: 20vh;
+  margin-bottom: 10%;
 }
 
 .aboutmeHeaders{
@@ -275,7 +277,7 @@
   flex-direction: row;
   column-gap: 10%;
   align-items: center;
-
+  justify-content: center;
 }
 
 .MeIMG{
